--- a/styles/github-markdown-dark-high-contrast.css
+++ b/styles/github-markdown-dark-high-contrast.css
@@ -1,7 +1,7 @@
 [data-color-mode=light][data-light-theme=dark_high_contrast],
 [data-color-mode=dark][data-dark-theme=dark_high_contrast],
-.vscode-body.vscode-light [data-color-mode=auto][data-light-theme=dark_high_contrast],
-.vscode-body.vscode-dark [data-color-mode=auto][data-dark-theme=dark_high_contrast] {
+.body.light [data-color-mode=auto][data-light-theme=dark_high_contrast],
+.body.dark [data-color-mode=auto][data-dark-theme=dark_high_contrast] {
   /*dark_high_contrast*/
   color-scheme: dark;
   --color-prettylights-syntax-comment: #bdc4cc;
