--- a/styles/github-markdown-dark.css
+++ b/styles/github-markdown-dark.css
@@ -1,7 +1,7 @@
 [data-color-mode=light][data-light-theme=dark],
 [data-color-mode=dark][data-dark-theme=dark],
-.vscode-body.vscode-light [data-color-mode=auto][data-light-theme=dark],
-.vscode-body.vscode-dark [data-color-mode=auto][data-dark-theme=dark] {
+.body.light [data-color-mode=auto][data-light-theme=dark],
+.body.dark [data-color-mode=auto][data-dark-theme=dark] {
   /*dark*/
   color-scheme: dark;
   --color-prettylights-syntax-comment: #8b949e;
