--- a/styles/github-markdown-dark-colorblind.css
+++ b/styles/github-markdown-dark-colorblind.css
@@ -1,7 +1,7 @@
 [data-color-mode=light][data-light-theme=dark_colorblind],
 [data-color-mode=dark][data-dark-theme=dark_colorblind],
-.body.light [data-color-mode=auto][data-light-theme=dark_colorblind],
-.body.dark [data-color-mode=auto][data-dark-theme=dark_colorblind] {
+.light [data-color-mode=auto][data-light-theme=dark_colorblind],
+.dark [data-color-mode=auto][data-dark-theme=dark_colorblind] {
   /*dark_colorblind*/
   color-scheme: dark;
   --color-prettylights-syntax-comment: #8b949e;
