--- a/styles/base.css
+++ b/styles/base.css
@@ -1,74 +1,11 @@
 html,
-body,
-.markdown-body {
+body{
     padding: 0 !important;
     max-width: auto !important;
 }
 
 html,
-body,
-.markdown-body {
+body{
     background-color: var(--color-canvas-default);
     color: var(--color-fg-default);
-}
-
-.markdown-body {
-    border: 1px solid transparent;
-    box-sizing: border-box;
-    margin: 0 auto;
-    width: 100% !important;
-}
-
-.markdown-content {
-    padding: 32px !important;
-    max-width: 980px;
-    min-width: 200px;
-    margin: 0 auto;
-}
-
-
-.scrollBeyondLastLine {
-    margin-bottom: 0;
-}
-.scrollBeyondLastLine .markdown-body {
-    padding-bottom: calc(100vh + 10px) !important;
-}
-
-.markdown-body blockquote {
-    background-color: initial;
-}
-
-.markdown-body pre {
-    color: initial;
-}
-
-.markdown-body code {
-    color: inherit;
-}
-
-.markdown-body pre code {
-    color: initial;
-}
-
-.markdown-body code > div {
-    background: none
-}
-
-.markdown-body.showEditorSelection .code-line .code-line:hover:before {
-	border-left: none;
-}
-
-.markdown-body p,
-.markdown-body blockquote,
-.markdown-body ul,
-.markdown-body ol,
-.markdown-body dl,
-.markdown-body table,
-.markdown-body pre {
-  margin-top: 16px;
-  margin-bottom: 16px;
-}
-
-.dark.showEditorSelection .code-line:hover:before {
-    border-left: 3px solid var(--color-fg-default);
 }
