--- a/styles/base.css
+++ b/styles/base.css
@@ -2,10 +2,6 @@ html,
 body{
     padding: 0 !important;
     max-width: auto !important;
-    margin-top: 0px;
-    margin-right: auto;
-    margin-bottom: 0px;
-    margin-left: auto;
 }
 
 html,
@@ -14,6 +10,10 @@ body{
     color: var(--color-fg-default);
 }
 
-.markdown-body {
+.content{
     max-width: 800;
-  }
+    margin-top: 0px;
+    margin-right: auto;
+    margin-bottom: 0px;
+    margin-left: auto;
+}
